--- a/a.html/larn.css
+++ b/a.html/larn.css
@@ -293,7 +293,7 @@ header .trip_bx .trv_bx .cardss .cardq .btnc h5 span {
 .offers h1 {
   font-weight: 600;
   text-align: center;
-  margin: 80;
+  margin: 80px;
 }
 
 .offers p {
